--- a/README.textile
+++ b/README.textile
@@ -7,7 +7,7 @@ h1. Bundled Plugins
 * "Ack":http://www.vim.org/scripts/script.php?script_id=2572 - type :Ack [search pattern] to search your entire project
 * "bufexplorer":http://www.vim.org/scripts/script.php?script_id=42 - manage your file buffers
 * "camelcasemotion":http://www.vim.org/scripts/script.php?script_id=1905 - motions that help navigate CamelCased text
-* "vim-ruby":https://github.com/vim-ruby/vim-ruby/wiki - syntax highlight, smart identation, auto-complete for Ruby
+* "coffee-script":https://github.com/kchmck/vim-coffee-script - syntax highlight for Coffee Script
 * "Command-T":http://www.vim.org/scripts/script.php?script_id=3025 - the fastest and most intuitive way for opening files in your project
 * "cucumber":http://www.vim.org/scripts/script.php?script_id=2973 - support for cucumber features such as syntax highlight, indentation, etc
 * "endwise":http://www.vim.org/scripts/script.php?script_id=2386 - support to close Ruby blocks such as 'if', 'do' with 'end'
@@ -15,23 +15,23 @@ h1. Bundled Plugins
 * "gundo":http://www.vim.org/scripts/script.php?script_id=3304 - visualizes undo tree
 * "haml":http://www.vim.org/scripts/script.php?script_id=1773 - syntax highlight for HAML
 * "html5.vim":https://github.com/othree/html5.vim - omnicomplete function and syntax for HTML5
+* "jquery":https://github.com/itspriddle/vim-jquery - Vim syntax file to add some colorations for jQuery keywords and css selectors
+* "less":https://github.com/groenewege/vim-less - syntax highlight for Less
 * "markdown":http://www.vim.org/scripts/script.php?script_id=1242 - syntax highlight for Markdown
 * "NERD_commenter":http://www.vim.org/scripts/script.php?script_id=1218 - support to comment lines of code
 * "pathogen":http://www.vim.org/scripts/script.php?script_id=2332 - the magic souce that makes it super easy to install plugins
+* "preview":http://www.vim.org/scripts/script.php?script_id=3344 - [leader] P previews Markdown, Rdoc, Textile, html. Requires Ruby and other gems.
 * "rails":http://www.vim.org/scripts/script.php?script_id=1567 - lot's of tools to make it easier to manage your Rails projects
+* "ruby":https://github.com/vim-ruby/vim-ruby/wiki - syntax highlight, smart identation, auto-complete for Ruby
+* "ruby-sinatra":https://github.com/hallison/vim-ruby-sinatra - syntax highlight for Sinatra
 * "securemodelines":http://www.vim.org/scripts/script.php?script_id=1876 - makes it harder to do something unsecure with modeline
 * "snipmate":https://github.com/akitaonrails/snipmate.vim - support for textmate-like snippets for several languages
 * "supertab":http://www.vim.org/scripts/script.php?script_id=1643 - pseudo auto-complete with tab
 * "surround":http://www.vim.org/scripts/script.php?script_id=1697 - add, change, remove surrounding parentheses, brackets, quotes, etc
 * "syntastic":http://www.vim.org/scripts/script.php?script_id=2736 - checks for syntax errors in many languages
 * "textile":http://www.vim.org/scripts/script.php?script_id=2305 - syntax highlight for Textile
-* "vim-coffee-script":https://github.com/kchmck/vim-coffee-script - syntax highlight for Coffee Script
-* "vim-jquery":https://github.com/itspriddle/vim-jquery - Vim syntax file to add some colorations for jQuery keywords and css selectors
-* "vim-preview":http://www.vim.org/scripts/script.php?script_id=3344 - [leader] P previews Markdown, Rdoc, Textile, html. Requires Ruby and other gems.
-* "vim-ruby":https://github.com/vim-ruby/vim-ruby/wiki - syntax highlight, smart identation, auto-complete for Ruby
-* "vim-ruby-sinatra":https://github.com/hallison/vim-ruby-sinatra - syntax highlight for Sinatra
-* "vim-textobj-rubyblock":http://vimcasts.org/blog/2010/12/a-text-object-for-ruby-blocks/ - smart block selection in Ruby code
-* "vim-yankring":http://www.vim.org/scripts/script.php?script_id=1234 - maintains a history of yanks and deletes. History can be shared between multiple instances of vim.
+* "textobj-rubyblock":http://vimcasts.org/blog/2010/12/a-text-object-for-ruby-blocks/ - smart block selection in Ruby code
+* "yankring":http://www.vim.org/scripts/script.php?script_id=1234 - maintains a history of yanks and deletes. History can be shared between multiple instances of vim.
 
 h1. Usage
 
